force-app/main/default/objects/ServicePoint__c/fields/RemiCode__c.field-meta.xml
<CustomField>
    <fullName>RemiCode__c</fullName>
    <description>Cabina di REgolazione e MIsura (REMI) è il punto fisico di congiunzione tra le reti.</description>
    <label>Codice REMI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>