force-app/main/default/objects/ServicePoint__c/fields/RenewalMonth__c.field-meta.xml
<CustomField>
    <fullName>RenewalMonth__c</fullName>
    <label>Mese Rinnovo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>