force-app/main/default/objects/ServicePoint__c/fields/RowIdSiebel__c.field-meta.xml
<CustomField>
    <fullName>RowIdSiebel__c</fullName>
    <description>Valorizzato solo per record migrati</description>
    <label>Record Correlato SIEBEL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>