force-app/main/default/objects/ServicePoint__c/fields/SalesCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCompanyCode__c</fullName>
    <label>Codice Societa di Vendita</label>
    <length>50</length>
    <type>Text</type>
</CustomField>