force-app/main/default/objects/ServicePoint__c/fields/SAPContractAccountCode__c.field-meta.xml
<CustomField>
    <fullName>SAPContractAccountCode__c</fullName>
    <label>SAPContractAccountCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>