force-app/main/default/objects/ServicePoint__c/fields/SAPContractCode__c.field-meta.xml
<CustomField>
    <fullName>SAPContractCode__c</fullName>
    <label>Codice Contratto SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>