force-app/main/default/objects/ServicePoint__c/fields/SapContractStatus__c.field-meta.xml
<CustomField>
    <fullName>SapContractStatus__c</fullName>
    <label>Stato Contratto SAP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>