force-app/main/default/objects/ServicePoint__c/fields/SAPImplantCode__c.field-meta.xml
<CustomField>
    <fullName>SAPImplantCode__c</fullName>
    <description>SAPImplantCode__c</description>
    <externalId>true</externalId>
    <label>Impianto SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>