force-app/main/default/objects/ServicePoint__c/fields/ServicePointCode__c.field-meta.xml
<CustomField>
    <fullName>ServicePointCode__c</fullName>
    <label>Service Point Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>