force-app/main/default/objects/ServicePoint__c/fields/SingleInstallmentOperating__c.field-meta.xml
<CustomField>
    <fullName>SingleInstallmentOperating__c</fullName>
    <label>Operando rata unica</label>
    <type>TextArea</type>
</CustomField>