force-app/main/default/objects/ServicePoint__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impianto compl. in funzione</fullName>
            </value>
            <value>
                <fullName>Interruzione avviata</fullName>
            </value>
            <value>
                <fullName>Impianto parzialmente chiuso</fullName>
            </value>
            <value>
                <fullName>Impianto compl. chiuso</fullName>
            </value>
            <value>
                <fullName>Impianto in attivazione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>