force-app/main/default/objects/ServicePoint__c/fields/SubscriberCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>SubscriberCustomerCode__c</fullName>
    <formula>Account__r.CustomerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Cliente Sottoscrittore</label>
    <type>Text</type>
</CustomField>