force-app/main/default/objects/ServicePoint__c/fields/SupplyAddessIsForeign__c.field-meta.xml
<CustomField>
    <fullName>SupplyAddessIsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Estero</label>
    <type>Checkbox</type>
</CustomField>