force-app/main/default/objects/ServicePoint__c/fields/SupplyAddress__c.field-meta.xml
<CustomField>
    <fullName>SupplyAddress__c</fullName>
    <description>Concatenazione campi indirizzo. Può visualizzare fino a 1300 caratteri</description>
    <formula>IF(!ISBLANK(SupplyStreetName__c),SupplyStreetName__c,SupplyStreet__c)&amp;&apos; &apos;&amp;SupplyStreetNumber__c 
&amp;IF(!ISBLANK(SupplyStreetNumberExtension__c),&apos;/&apos;&amp; SupplyStreetNumberExtension__c,&apos;&apos;)
&amp;IF(!ISBLANK(SupplyPlace__c),&apos;, &apos;&amp; SupplyPlace__c,&apos;&apos;)
&amp;&apos;, &apos;&amp;SupplyCity__c&amp;&apos; &apos;&amp;SupplyProvince__c
&amp;&apos;, &apos;&amp;SupplyPostalCode__c&amp;&apos; &apos;&amp;SupplyCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirizzo [Fornitura]</label>
    <type>Text</type>
</CustomField>