force-app/main/default/objects/ServicePoint__c/fields/SupplyCity__c.field-meta.xml
<CustomField>
    <fullName>SupplyCity__c</fullName>
    <label>Comune [Fornitura]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>