force-app/main/default/objects/ServicePoint__c/fields/SupplyCityCode__c.field-meta.xml
<CustomField>
    <fullName>SupplyCityCode__c</fullName>
    <label>Codice comune SAP [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>