force-app/main/default/objects/ServicePoint__c/fields/SupplyCountry__c.field-meta.xml
<CustomField>
    <fullName>SupplyCountry__c</fullName>
    <label>Stato [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>