force-app/main/default/objects/ServicePoint__c/fields/SupplyIsAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>SupplyIsAddressVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo verificato  [Fornitura]</label>
    <type>Checkbox</type>
</CustomField>