force-app/main/default/objects/ServicePoint__c/fields/SupplyPlace__c.field-meta.xml
<CustomField>
    <fullName>SupplyPlace__c</fullName>
    <label>Place [Supply]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>