force-app/main/default/objects/ServicePoint__c/fields/SupplyPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>SupplyPlaceCode__c</fullName>
    <label>Codice Località [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>