force-app/main/default/objects/ServicePoint__c/fields/SupplyPostalCode__c.field-meta.xml
<CustomField>
    <fullName>SupplyPostalCode__c</fullName>
    <label>CAP [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>