force-app/main/default/objects/ServicePoint__c/fields/SupplyProvince__c.field-meta.xml
<CustomField>
    <fullName>SupplyProvince__c</fullName>
    <label>Provincia [Fornitura]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>