force-app/main/default/objects/ServicePoint__c/fields/SupplySAPCityCode__c.field-meta.xml
<CustomField>
    <fullName>SupplySAPCityCode__c</fullName>
    <label>SAP City Code [Supply]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>