force-app/main/default/objects/ServicePoint__c/fields/SupplySAPStreetCode__c.field-meta.xml
<CustomField>
    <fullName>SupplySAPStreetCode__c</fullName>
    <label>Codice Via Stradario SAP [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>