force-app/main/default/objects/ServicePoint__c/fields/SupplyStreet__c.field-meta.xml
<CustomField>
    <fullName>SupplyStreet__c</fullName>
    <label>Street [Supply]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>