force-app/main/default/objects/ServicePoint__c/fields/SupplyStreetName__c.field-meta.xml
<CustomField>
    <fullName>SupplyStreetName__c</fullName>
    <label>Via [Fornitura]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>