force-app/main/default/objects/ServicePoint__c/fields/SupplyStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>SupplyStreetNumber__c</fullName>
    <label>Civico [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>