force-app/main/default/objects/ServicePoint__c/fields/SupplyStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>SupplyStreetNumberExtension__c</fullName>
    <label>Street Number Extension [Supply]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>