force-app/main/default/objects/ServicePoint__c/fields/SupplyStreetToponym__c.field-meta.xml
<CustomField>
    <fullName>SupplyStreetToponym__c</fullName>
    <description>Contiene il Toponimo dell&apos;indirizzo</description>
    <label>Toponimo [Fornitura]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>