force-app/main/default/objects/ServicePoint__c/fields/SupplyType_Deprecate__c.field-meta.xml
<CustomField>
    <fullName>SupplyType_Deprecate__c</fullName>
    <description>Tipologia di fornitura (Tipo d&apos;uso)</description>
    <label>Tipologia Fornitura_Deprecate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestico</fullName>
            </value>
            <value>
                <fullName>Non Domestico</fullName>
            </value>
            <value>
                <fullName>A-Domestico</fullName>
            </value>
            <value>
                <fullName>B-Condominio</fullName>
            </value>
            <value>
                <fullName>C-Aziende di pubblica utilita</fullName>
            </value>
            <value>
                <fullName>D-Altri usi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>