force-app/main/default/objects/ServicePoint__c/fields/SupplyTypeTemp__c.field-meta.xml
<CustomField>
    <fullName>SupplyTypeTemp__c</fullName>
    <description>Domestico
Non Domestico
A-Domestico
B-Condominio
C-Aziende di pubblica utilita
D-Altri usi</description>
    <label>Tipo Fornitura Temp</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CommoditySector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_SupplyType</valueSetName>
    </valueSet>
</CustomField>