force-app/main/default/objects/ServicePoint__c/fields/SwitchInWinback__c.field-meta.xml
<CustomField>
    <fullName>SwitchInWinback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo Tecnino utile a  riconoscere i casi di switch in winback del transitorio</description>
    <label>SwitchIn Winback</label>
    <type>Checkbox</type>
</CustomField>