force-app/main/default/objects/ServicePoint__c/fields/SwitchOutDate__c.field-meta.xml
<CustomField>
    <fullName>SwitchOutDate__c</fullName>
    <label>Data Decorrenza Switch out</label>
    <type>Date</type>
</CustomField>