force-app/main/default/objects/ServicePoint__c/fields/TemporaryContractCode__c.field-meta.xml
<CustomField>
    <fullName>TemporaryContractCode__c</fullName>
    <description>Codice contratto SAP utilizzato durante il transitorio</description>
    <label>Codice Contratto Transitorio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>