force-app/main/default/objects/ServicePoint__c/fields/UseCategory__c.field-meta.xml
<CustomField>
    <fullName>UseCategory__c</fullName>
    <description>Categoria uso valida solo per il GAS</description>
    <label>Categoria uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001-Uso cottura cibi</fullName>
            </value>
            <value>
                <fullName>002-Prod.acqua calda sanitaria</fullName>
            </value>
            <value>
                <fullName>003-CotturaCibi+AcquaCalda</fullName>
            </value>
            <value>
                <fullName>004-Uso tecnologico</fullName>
            </value>
            <value>
                <fullName>005-Uso condizionamento</fullName>
            </value>
            <value>
                <fullName>006-Riscald. individ./central.</fullName>
            </value>
            <value>
                <fullName>007-Ris.Ind+Cottura+AcquaCalda</fullName>
            </value>
            <value>
                <fullName>008-Ris.Ind.+Cottura Cibi</fullName>
            </value>
            <value>
                <fullName>009-Ris.Ind.+AcquaCalda</fullName>
            </value>
            <value>
                <fullName>010-Ris.Cen.+Cott.+AcquaCalda</fullName>
            </value>
            <value>
                <fullName>011-Ris.Cen.+AcquaCalda</fullName>
            </value>
            <value>
                <fullName>012-Uso Tecnologico + Riscald.</fullName>
            </value>
            <value>
                <fullName>013-Uso Condizionam.+Riscald.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>