force-app/main/default/objects/ServicePoint__c/fields/UseTypeEnergy__c.field-meta.xml
<CustomField>
    <fullName>UseTypeEnergy__c</fullName>
    <label>Uso energia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_UseTypeEnergy</valueSetName>
    </valueSet>
</CustomField>