force-app/main/default/objects/ServicePoint__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <description>Campo da Travasare su Order</description>
    <label>Vat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>