force-app/main/default/objects/ServicePoint__c/fields/VoltageLevel__c.field-meta.xml
<CustomField>
    <fullName>VoltageLevel__c</fullName>
    <description>Livello di tensione</description>
    <label>Tensione di Consegna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_VoltageLevel</valueSetName>
    </valueSet>
</CustomField>