force-app/main/default/objects/ServicePoint__c/fields/WithdrawalClass__c.field-meta.xml
<CustomField>
    <fullName>WithdrawalClass__c</fullName>
    <description>Classe di prelievo</description>
    <label>Classe di prelievo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001-7 giorni</fullName>
            </value>
            <value>
                <fullName>002-6 giorni (no dom.+fest.)</fullName>
            </value>
            <value>
                <fullName>003-5 giorni(no sab.dom.fest)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>