force-app/main/default/objects/ServicePoint__c/fields/ZootechnicalHousingUnit__c.field-meta.xml
<CustomField>
    <fullName>ZootechnicalHousingUnit__c</fullName>
    <label>Unità abitative Uso zootecnico</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>