force-app/main/default/objects/ServicePoint__c/recordTypes/HDT_RT_Acqua.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Acqua</fullName>
    <active>true</active>
    <description>Punto di fornitura Idrico</description>
    <label>Punto Idrico</label>
</RecordType>