force-app/main/default/objects/ServicePoint__c/recordTypes/HDT_RT_Ambiente.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Ambiente</fullName>
    <active>true</active>
    <description>Punto di fornitura Ambiente</description>
    <label>Punto Ambiente</label>
</RecordType>