force-app/main/default/objects/ServicePoint__c/recordTypes/HDT_RT_EE.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EE</fullName>
    <active>true</active>
    <label>Elettrico</label>
</RecordType>