force-app/main/default/objects/ServicePoint__c/recordTypes/HDT_RT_Ele.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Ele</fullName>
    <active>true</active>
    <description>Punto di fornitura Energia Elettrica</description>
    <label>Punto Elettrico</label>
</RecordType>