force-app/main/default/objects/ServicePoint__c/recordTypes/HDT_RT_Gas.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Gas</fullName>
    <active>true</active>
    <description>Punto di fornitura Gas</description>
    <label>Punto Gas</label>
</RecordType>