force-app/main/default/objects/ServicePoint__c/recordTypes/HDT_RT_GG.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_GG</fullName>
    <active>true</active>
    <label>Gas</label>
</RecordType>